@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST launchy-0.3.5.gem 17408 RMD160 e7c900ac07ff1b9b6f870850668b15b037c2bdf6 SHA1 dd3ea16a93210472272fe4db24d375c17939275b SHA256 8a4b28c8b2fb05a2a02067104143a920a397dbbd77519f2aee413332c0940b53
 DIST launchy-2.0.3.gem 18432 RMD160 f833bfaf4953a4f6c3e850923d17514f62cf0359 SHA1 57fc7ab600d13f3b69495047756b5ac18bffa65f SHA256 a1720c0ec6ec62b34893c4a21d688404cb6fac5d3da583e7f9b2c38753b658f9
+DIST launchy-2.0.5.gem 20480 RMD160 4c9546f3254461b60284701d43739739ed220458 SHA1 1de67507c838286b1fb14ef33b6719f9ccfa8eec SHA256 97d6dc41ea9694a8f6f0e9167bff0389e949d879114130d2c49af43383f77c54
 EBUILD launchy-0.3.5.ebuild 736 RMD160 465f5e76a095f362b38675cd227eaaef3d1a5ab7 SHA1 69fe559f9a26eb6efb16657a1d9edf1181d3d71f SHA256 2c5929f354c0495cba25a403916dcd059c931cc896b3b55e96a6c9b528cc3564
 EBUILD launchy-2.0.3.ebuild 844 RMD160 d9937daadaa11f15de2a7426fb425eb0440dc7ac SHA1 1b905449fee95a85d7e55c56c985bf6ab41b1f24 SHA256 1d0adf3cf5d5e42c5460f31ba63277cf61dcb63707ac43ab38855d5258ce11a4
-MISC ChangeLog 291 RMD160 446d900cba9e1a85408b84eb0fa3c6feee030564 SHA1 383afe326518fa620d9147bcf7c30fb567a04f12 SHA256 b45d5949b690aa321d6bdae74942c902e17ccc90ddd288a872f862de9a32e987
+EBUILD launchy-2.0.5.ebuild 953 RMD160 6c3574495e08553897eebb7015ecb537762a4b02 SHA1 c687763a8e153b712bdd908be1e989cb6d5c25f6 SHA256 5517a8e44fa998f6d39a226f8597d739f80bb653d8bf345b89623e451eb82ec4
+MISC ChangeLog 411 RMD160 0b983496759a657aadbf795a88c09c5d9131537f SHA1 aa69ffa83bfa909c9386e5c4b4729e77bd58dcc8 SHA256 b2f040b72ff08ba85bd98fb5b65c7d5937ed56f7c6c860cf993d6482aed15210
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk4lLi0ACgkQiIP6VqMIqNcbngD9F1nt37Uf+oFeXQd2wriADMBz
-BqbiQuOy8V9MpAUzryIA/jLRBdalie5iKdLnwWJ5L27mXlM49phAp7T5oK1oFkEr
-=ywda
+iF4EAREIAAYFAk8OgaAACgkQiIP6VqMIqNeI9wD7BI4MqNnRyt1URBjE5Bv1HPTV
+cHFXSf2ijehIiFkjrAYA+QEZzHdSw1eHVpEpRfN98xqUPRk6DlTY1QHmQNT45Y4W
+=kM4X
 -----END PGP SIGNATURE-----
