@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/launchy
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*launchy-2.0.5 (12 Jan 2012)
+
+  12 Jan 2012; Hans de Graaff <graaff@gentoo.org> +launchy-2.0.5.ebuild:
+  Version bump.
 
 *launchy-2.0.3 (19 Jul 2011)
 
